--- a/color.html
+++ b/color.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Choose Color - Kurti Customization</title>
+    <link rel="icon" type="image/x-icon" href="/public/images/logo4.png" />
     <style>
       body {
         font-family: "Poppins", sans-serif;
@@ -401,7 +402,7 @@
       </div>
 
       <div class="navigation-buttons">
-        <a href="/views/html/selectLen.html" class="btn btn-secondary">Back</a>
+        <a href="/selectLen.html" class="btn btn-secondary">Back</a>
         <button
           id="nextButton"
           class="btn btn-disabled"
@@ -553,7 +554,7 @@
       function goToNextStep() {
         // Here you can add any validation if needed
         // For now, we simply navigate to the next page
-        window.location.href = "/views/html/review.html";
+        window.location.href = "/review.html";
       }
     </script>
   </body>
