--- a/fabric.html
+++ b/fabric.html
@@ -330,12 +330,12 @@
       function proceedToNextStep() {
         document.querySelector(".progress-completed").style.width = "60%";
         setTimeout(() => {
-          window.location.href = "/views/html/size.html";
+          window.location.href = "/size.html";
         }, 500);
       }
 
       function goBack() {
-        window.location.href = "/views/html/adjust.html";
+        window.location.href = "/adjust.html";
       }
 
       function saveCustomizationData() {
