--- a/neck.html
+++ b/neck.html
@@ -330,7 +330,7 @@
       </div>
 
       <div class="navigation-buttons">
-        <a href="/views/html/custom.html" class="btn btn-secondary">Back</a>
+        <a href="/custom.html" class="btn btn-secondary">Back</a>
         <button
           id="nextButton"
           class="btn btn-disabled"
@@ -415,7 +415,7 @@
 
         // Navigate to sleeve selection page
         setTimeout(() => {
-          window.location.href = "/views/html/sleeveLength.html";
+          window.location.href = "/sleeveLength.html";
         }, 500);
       }
 
