--- a/review.html
+++ b/review.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Review - Kurti Customization</title>
+    <title>Review</title>
+    <link rel="icon" type="image/x-icon" href="/public/images/logo4.png" />
     <style>
       /* Basic Reset & Shared Styles */
       body {
@@ -212,7 +213,7 @@
       </div>
 
       <div class="navigation-buttons">
-        <a href="color.html" class="btn btn-secondary">Back</a>
+        <a href="/color.html" class="btn btn-secondary">Back</a>
         <button id="submitButton" class="btn" onclick="submitCustomization()">
           Submit
         </button>
@@ -273,7 +274,7 @@
         // Add any submission logic or validations here
         alert("Your customization has been submitted!");
         // Redirect to a Thank You or Payment page
-        window.location.href = "/views/html/complete.html";
+        window.location.href = "complete.html";
       }
     </script>
   </body>
