--- a/reviewupload.html
+++ b/reviewupload.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Review Design | Kurti Customization</title>
+    <title>Review Design</title>
+    <link rel="icon" type="image/x-icon" href="/public/images/logo4.png" />
     <style>
       body {
         font-family: "Poppins", sans-serif;
@@ -379,12 +380,12 @@
       function proceedToNextStep() {
         document.querySelector(".progress-completed").style.width = "90%";
         setTimeout(() => {
-          window.location.href = "/views/html/complete.html";
+          window.location.href = "/complete.html";
         }, 500);
       }
 
       function goBack() {
-        window.location.href = "/views/html/size.html";
+        window.location.href = "/size.html";
       }
     </script>
   </body>
