--- a/neck.html
+++ b/neck.html
@@ -415,7 +415,7 @@
 
         // Navigate to sleeve selection page
         setTimeout(() => {
-          window.location.href = "/sleeveLength.html";
+          window.location.href = "./sleeveLength.html";
         }, 500);
       }
 
