--- a/sleeveLength.html
+++ b/sleeveLength.html
@@ -310,7 +310,7 @@
       </div>
 
       <div class="navigation-buttons">
-        <a href="/neck.html" class="btn btn-secondary">Back</a>
+        <a href="./neck.html" class="btn btn-secondary">Back</a>
         <button
           id="nextButton"
           class="btn btn-disabled"
@@ -395,7 +395,7 @@
 
         // Navigate to length selection page
         setTimeout(() => {
-          window.location.href = "/selectLen.html";
+          window.location.href = "./selectLen.html";
         }, 500);
       }
 
