--- a/selectLen.html
+++ b/selectLen.html
@@ -393,7 +393,7 @@
 
         // Navigate to color selection page
         setTimeout(() => {
-          window.location.href = "/color.html";
+          window.location.href = "./color.html";
         }, 500);
       }
 
