--- a/color.html
+++ b/color.html
@@ -402,7 +402,7 @@
       </div>
 
       <div class="navigation-buttons">
-        <a href="/selectLen.html" class="btn btn-secondary">Back</a>
+        <a href="./selectLen.html" class="btn btn-secondary">Back</a>
         <button
           id="nextButton"
           class="btn btn-disabled"
@@ -554,7 +554,7 @@
       function goToNextStep() {
         // Here you can add any validation if needed
         // For now, we simply navigate to the next page
-        window.location.href = "/review.html";
+        window.location.href = "./review.html";
       }
     </script>
   </body>
