--- a/review.html
+++ b/review.html
@@ -213,7 +213,7 @@
       </div>
 
       <div class="navigation-buttons">
-        <a href="/color.html" class="btn btn-secondary">Back</a>
+        <a href="./color.html" class="btn btn-secondary">Back</a>
         <button id="submitButton" class="btn" onclick="submitCustomization()">
           Submit
         </button>
